--- a/group_project_actual.ipynb
+++ b/group_project_actual.ipynb
@@ -1,6 +1,31 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bfe681bd-73de-4e46-b0d4-86adbe0b7b7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fjeifefiojfeffe"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "R",
+   "language": "R",
+   "name": "ir"
+  },
+  "language_info": {
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r",
+   "version": "4.3.1"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
