--- a/group_project_actual.ipynb
+++ b/group_project_actual.ipynb
@@ -12,12 +12,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "63e9d8fd-53ae-42c2-953a-049865593dca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in parse(text = x, srcfile = src): <text>:1:10: unexpected '\\\\'\n1: 666666666\\\n             ^\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in parse(text = x, srcfile = src): <text>:1:10: unexpected '\\\\'\n1: 666666666\\\n             ^\nTraceback:\n"
+     ]
+    }
+   ],
    "source": [
-    "666666666"
+    "666666666\\asdas\n"
    ]
   }
  ],
