--- a/group_project_actual.ipynb
+++ b/group_project_actual.ipynb
@@ -1,29 +1,121 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bfe681bd-73de-4e46-b0d4-86adbe0b7b7a",
+   "cell_type": "markdown",
+   "id": "cc3c9b70-cf46-42bd-be8b-e9418d20ab6d",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "fjeifefiojfeffe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "63e9d8fd-53ae-42c2-953a-049865593dca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Test <- \"Test\""
+    "# Understanding "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abf73632-c296-4474-8380-98634aa0cf20",
+   "id": "a4f78b53-413f-4e80-ad31-678f3a074002",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5aba8d8-7295-4da0-ba2e-f9e82199a6cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "235458c9-8320-4c71-9af1-8afe8a4a3553",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1147380-9f69-4250-9921-aa3ff68e44b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0c4a209-f08d-46b0-8adb-bd2d47afc45f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12b38970-4114-459e-829e-cd6eb2f0a543",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36431e5e-440f-4617-9683-db9ad5f6fc8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e12e30a7-c964-478c-aab9-ea55e00a1f03",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86b53dde-185c-4958-a693-580819916d84",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3d79d6d-0848-4a99-88cc-f57796d6bf31",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f60e2619-9652-41fd-9d3b-8cf8443d2279",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "721f5236-c705-4e5c-8cfa-61545c5fc835",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6eec42e-2028-4553-9d13-bbdc3088838c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bffc5070-c461-4a87-a3c7-2dd9fa05a5c0",
    "metadata": {},
    "outputs": [],
    "source": []
