--- a/group_project_actual.ipynb
+++ b/group_project_actual.ipynb
@@ -5,16 +5,16 @@
    "id": "cc3c9b70-cf46-42bd-be8b-e9418d20ab6d",
    "metadata": {},
    "source": [
-    "# Understanding "
+    "# Understanding Apple Quality: A Prediction Based on Ripeness and Acidity\r\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a4f78b53-413f-4e80-ad31-678f3a074002",
+   "cell_type": "markdown",
+   "id": "08d6e3a4-810e-45a1-8c1d-b844ee7bae86",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Introduction"
+   ]
   },
   {
    "cell_type": "code",
