--- a/group_project_actual.ipynb
+++ b/group_project_actual.ipynb
@@ -13,7 +13,12 @@
    "id": "08d6e3a4-810e-45a1-8c1d-b844ee7bae86",
    "metadata": {},
    "source": [
-    "# Introduction"
+    "# Introduction\n",
+    "Apples are one of the most popular fruits being sold today in markets across the world. With hundreds of different types of apples being sold worldwide. With each apple sold, it has it’s own unique characteristics from its size to weight to juciness to acidity all of which play into if an apple is of good quality or not. \r\n",
+    "\r\n",
+    "   When researching, we wanted to create a predictive model that allowed us to predict whether an apple’s quality using selected variables that we believed had the potential to influence whether it would be rated as good or bad quality. \r\n",
+    "\r\n",
+    "   Using data classification, our goal to create a model to predict an Apple’s quality classification (good or bad) based on the variables of an apple’s acidity and ripeness values. All of the data used for this project has been retrieved from an Apple Quality data set from database repository: Kaggle. Full database can be found here: https://www.kaggle.com/datasets/nelgiriyewithana/apple-quality/data"
    ]
   },
   {
