--- a/group_project_actual.ipynb
+++ b/group_project_actual.ipynb
@@ -46,12 +46,12 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c0c4a209-f08d-46b0-8adb-bd2d47afc45f",
+   "cell_type": "markdown",
+   "id": "30d411ce-cb42-4399-80f5-b2c1be11a7bb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Preliminary Exploratory Data Analysis"
+   ]
   },
   {
    "cell_type": "code",
