--- a/group_project_actual.ipynb
+++ b/group_project_actual.ipynb
@@ -22,12 +22,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5aba8d8-7295-4da0-ba2e-f9e82199a6cc",
+   "cell_type": "markdown",
+   "id": "aa24d5c3-bd4c-4bbc-8a24-84a88e52f4d0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Classification Question\r\n",
+    "Predictive Question: How does the acidity and ripeness values of any given apple, influence it’s overall quality status (good or bad)? \r\n",
+    "\r\n",
+    "The dataset we had chosen is comprised of a variety of attributes of any given apple namely: size, weight, sweetness, crunchiness, juiciness, ripeness, acidity, and quality with quality being the only qualitative variable in the data set. To our knowledge, all observations have complete data with no “N/As” or blank. \r\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -35,9 +38,7 @@
    "id": "235458c9-8320-4c71-9af1-8afe8a4a3553",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "asdasdasd"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
