--- a/group_project_actual.ipynb
+++ b/group_project_actual.ipynb
@@ -41,11 +41,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a1147380-9f69-4250-9921-aa3ff68e44b1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# iii"
+   ]
   },
   {
    "cell_type": "markdown",
