some more analysis

--- a/group_project_actual.ipynb
+++ b/group_project_actual.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "e12e30a7-c964-478c-aab9-ea55e00a1f03",
    "metadata": {},
    "outputs": [
@@ -229,61 +229,61 @@
      "data": {
       "text/html": [
        "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 4000 × 4</caption>\n",
+       "<caption>A tibble: 1000 × 4</caption>\n",
        "<thead>\n",
        "\t<tr><th scope=col>A_id</th><th scope=col>Acidity</th><th scope=col>Ripeness</th><th scope=col>Quality</th></tr>\n",
        "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>0</td><td>-0.491590483</td><td> 0.32983980</td><td>good</td></tr>\n",
-       "\t<tr><td>1</td><td>-0.722809367</td><td> 0.86753008</td><td>good</td></tr>\n",
-       "\t<tr><td>2</td><td>2.621636473 </td><td>-0.03803333</td><td>bad </td></tr>\n",
+       "\t<tr><td>1266</td><td>0.01769468  </td><td> 3.9229588</td><td>bad </td></tr>\n",
+       "\t<tr><td>3043</td><td>-2.569348843</td><td>-0.3253103</td><td>good</td></tr>\n",
+       "\t<tr><td>1080</td><td>0.340346714 </td><td> 1.5491448</td><td>good</td></tr>\n",
        "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
-       "\t<tr><td>3997</td><td>-1.334611391</td><td> 4.7638592</td><td>bad </td></tr>\n",
-       "\t<tr><td>3998</td><td>-2.229719806</td><td> 0.2144884</td><td>good</td></tr>\n",
-       "\t<tr><td>3999</td><td>1.599796456 </td><td>-0.7765715</td><td>good</td></tr>\n",
+       "\t<tr><td> 90</td><td>-2.967415983</td><td> 1.041064</td><td>good</td></tr>\n",
+       "\t<tr><td>290</td><td>4.04329901  </td><td>-2.201672</td><td>bad </td></tr>\n",
+       "\t<tr><td>543</td><td>4.306460128 </td><td>-1.648863</td><td>bad </td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A tibble: 4000 × 4\n",
+       "A tibble: 1000 × 4\n",
        "\\begin{tabular}{llll}\n",
        " A\\_id & Acidity & Ripeness & Quality\\\\\n",
        " <dbl> & <chr> & <dbl> & <chr>\\\\\n",
        "\\hline\n",
-       "\t 0 & -0.491590483 &  0.32983980 & good\\\\\n",
-       "\t 1 & -0.722809367 &  0.86753008 & good\\\\\n",
-       "\t 2 & 2.621636473  & -0.03803333 & bad \\\\\n",
+       "\t 1266 & 0.01769468   &  3.9229588 & bad \\\\\n",
+       "\t 3043 & -2.569348843 & -0.3253103 & good\\\\\n",
+       "\t 1080 & 0.340346714  &  1.5491448 & good\\\\\n",
        "\t ⋮ & ⋮ & ⋮ & ⋮\\\\\n",
-       "\t 3997 & -1.334611391 &  4.7638592 & bad \\\\\n",
-       "\t 3998 & -2.229719806 &  0.2144884 & good\\\\\n",
-       "\t 3999 & 1.599796456  & -0.7765715 & good\\\\\n",
+       "\t  90 & -2.967415983 &  1.041064 & good\\\\\n",
+       "\t 290 & 4.04329901   & -2.201672 & bad \\\\\n",
+       "\t 543 & 4.306460128  & -1.648863 & bad \\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A tibble: 4000 × 4\n",
+       "A tibble: 1000 × 4\n",
        "\n",
        "| A_id &lt;dbl&gt; | Acidity &lt;chr&gt; | Ripeness &lt;dbl&gt; | Quality &lt;chr&gt; |\n",
        "|---|---|---|---|\n",
-       "| 0 | -0.491590483 |  0.32983980 | good |\n",
-       "| 1 | -0.722809367 |  0.86753008 | good |\n",
-       "| 2 | 2.621636473  | -0.03803333 | bad  |\n",
+       "| 1266 | 0.01769468   |  3.9229588 | bad  |\n",
+       "| 3043 | -2.569348843 | -0.3253103 | good |\n",
+       "| 1080 | 0.340346714  |  1.5491448 | good |\n",
        "| ⋮ | ⋮ | ⋮ | ⋮ |\n",
-       "| 3997 | -1.334611391 |  4.7638592 | bad  |\n",
-       "| 3998 | -2.229719806 |  0.2144884 | good |\n",
-       "| 3999 | 1.599796456  | -0.7765715 | good |\n",
+       "|  90 | -2.967415983 |  1.041064 | good |\n",
+       "| 290 | 4.04329901   | -2.201672 | bad  |\n",
+       "| 543 | 4.306460128  | -1.648863 | bad  |\n",
        "\n"
       ],
       "text/plain": [
-       "     A_id Acidity      Ripeness    Quality\n",
-       "1    0    -0.491590483  0.32983980 good   \n",
-       "2    1    -0.722809367  0.86753008 good   \n",
-       "3    2    2.621636473  -0.03803333 bad    \n",
-       "⋮    ⋮    ⋮            ⋮           ⋮      \n",
-       "3998 3997 -1.334611391  4.7638592  bad    \n",
-       "3999 3998 -2.229719806  0.2144884  good   \n",
-       "4000 3999 1.599796456  -0.7765715  good   "
+       "     A_id Acidity      Ripeness   Quality\n",
+       "1    1266 0.01769468    3.9229588 bad    \n",
+       "2    3043 -2.569348843 -0.3253103 good   \n",
+       "3    1080 0.340346714   1.5491448 good   \n",
+       "⋮    ⋮    ⋮            ⋮          ⋮      \n",
+       "998   90  -2.967415983  1.041064  good   \n",
+       "999  290  4.04329901   -2.201672  bad    \n",
+       "1000 543  4.306460128  -1.648863  bad    "
       ]
      },
      "metadata": {},
@@ -291,9 +291,8 @@
     }
    ],
    "source": [
-    "apples_select_50 <- apples_data |>\n",
-    "    select(A_id, Acidity, Ripeness, Quality) |>\n",
-    "    sample_n(50)\n",
+    "apples_select_1000 <- apples_data |>\n",
+    "    select(A_id, Acidity, Ripeness, Quality) \n",
     "apples_select"
    ]
   },
@@ -303,7 +302,9 @@
    "id": "86b53dde-185c-4958-a693-580819916d84",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "apples_split <- "
+   ]
   },
   {
    "cell_type": "code",
