--- a/group_project_actual.ipynb
+++ b/group_project_actual.ipynb
@@ -298,12 +298,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "86b53dde-185c-4958-a693-580819916d84",
+   "cell_type": "markdown",
+   "id": "8c8cd384-5c9b-42e0-97e9-e80c3af48a07",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Test"
+   ]
   },
   {
    "cell_type": "code",
