--- a/group_project_actual.ipynb
+++ b/group_project_actual.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "09d8ce53",
+   "id": "cc3c9b70-cf46-42bd-be8b-e9418d20ab6d",
    "metadata": {},
    "source": [
     "# Understanding Apple Quality: A Prediction Based on Ripeness and Acidity\r\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ff33259",
+   "id": "08d6e3a4-810e-45a1-8c1d-b844ee7bae86",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "999b74f0",
+   "id": "aa24d5c3-bd4c-4bbc-8a24-84a88e52f4d0",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
    },
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d281a8a4",
+   "id": "235458c9-8320-4c71-9af1-8afe8a4a3553",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -45,14 +45,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01c3e476",
+   "id": "a1147380-9f69-4250-9921-aa3ff68e44b1",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ff676c21",
+   "id": "30d411ce-cb42-4399-80f5-b2c1be11a7bb",
    "metadata": {},
    "source": [
     "# Preliminary Exploratory Data Analysis"
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6e34c743",
+   "id": "12b38970-4114-459e-829e-cd6eb2f0a543",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8680f661",
+   "id": "36431e5e-440f-4617-9683-db9ad5f6fc8c",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0e3490a6",
+   "id": "e12e30a7-c964-478c-aab9-ea55e00a1f03",
    "metadata": {},
    "outputs": [
     {
@@ -297,17 +297,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c4d68f82",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86b53dde-185c-4958-a693-580819916d84",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Test"
+    "apples_split <- initial_split(apples_select, prop = 0.75, "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12b9ffb0",
+   "id": "d3d79d6d-0848-4a99-88cc-f57796d6bf31",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -315,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ac04a98",
+   "id": "f60e2619-9652-41fd-9d3b-8cf8443d2279",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -323,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6841694",
+   "id": "721f5236-c705-4e5c-8cfa-61545c5fc835",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -331,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94d3907e",
+   "id": "b6eec42e-2028-4553-9d13-bbdc3088838c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -339,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fdc809b",
+   "id": "bffc5070-c461-4a87-a3c7-2dd9fa05a5c0",
    "metadata": {},
    "outputs": [],
    "source": []
