Expected outcomes and significance

--- a/Group Project Proposal.ipynb
+++ b/Group Project Proposal.ipynb
@@ -2419,12 +2419,12 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a38a6c35-f571-44ff-911c-84bad2dd84d4",
+   "cell_type": "markdown",
+   "id": "cc0447b9-27c9-4835-beb3-60d21c033fc6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Expected outcomes and significance\n"
+   ]
   },
   {
    "cell_type": "code",
