Expected outcomes and significance

--- a/Group Project Proposal.ipynb
+++ b/Group Project Proposal.ipynb
@@ -2423,7 +2423,8 @@
    "id": "cc0447b9-27c9-4835-beb3-60d21c033fc6",
    "metadata": {},
    "source": [
-    "# Expected outcomes and significance\n"
+    "# Expected outcomes and significance\n",
+    "We expect to find that apples with relatively higher acidity levels will likely end up as bad quality compared to apples with lower acidity levels. By knowing how acidity levels affect quality, it could be easier to predict and or identify if an apple will be bad quality. "
    ]
   },
   {
