New Changes - Tyler
Changes to:
1. Methods
2. Expected Outcomes and Significance

--- a/Group Project Proposal.ipynb
+++ b/Group Project Proposal.ipynb
@@ -26,7 +26,7 @@
    "id": "aa24d5c3-bd4c-4bbc-8a24-84a88e52f4d0",
    "metadata": {},
    "source": [
-    "### Classification Question\r\n",
+    "## Classification Question\r\n",
     "Predictive Question: How does the acidity and ripeness values of any given apple, influence it’s overall quality status (good or bad)? \r\n",
     "\r\n",
     "The dataset we had chosen is comprised of a variety of attributes of any given apple namely: size, weight, sweetness, crunchiness, juiciness, ripeness, acidity, and quality with quality being the only qualitative variable in the data set. To our knowledge, all observations have complete data with no “N/As” or blank. \r\n"
@@ -38,7 +38,28 @@
    "metadata": {},
    "source": [
     "# Methods\n",
-    "We will conduct our data analysis by subsetting our dataset to the variables that are likely to yield the desired results. Variables such as count (number of apples), ripeness, acidity, and quality of the apple. We want to predict an apple’s quality in terms of its ripeness and acidity based on the classification model. In this process, we will build a model to find the perfect k with the highest accuracy estimation. We will first split the dataset into two parts, training data and testing data. To tune data, we will do cross-validation by using vfold function. After standardizing the data, we will get the mean of each group's accuracy, select the most promising one, and finally find the k. In this process, we will also make a scatterplot, whose x-axis is neighbors and y-axis is mean to visualize the accuracy of k. Next, we want to use this k to find the accuracy of this classification model by testing the testing data. Finally, we are able to predict the quality of the new apple with workflow function."
+    "We will conduct our data analysis by subsetting our dataset to the variables that are likely to yield the desired results. Variables such as count (number of apples), ripeness, acidity, and quality of the apple. We want to predict an apple’s quality in terms of its ripeness and acidity based on the classification model. \n",
+    "\n",
+    "Here, we will build a model to find the perfect K with the highest accuracy estimation. We will first split the dataset into two parts, training data and testing data. To tune data, we will do cross-validation by using vfold function. After standardizing the data, we will get the mean of each group's accuracy, select the most promising one, and finally find the K. \n",
+    "\n",
+    "For visualizations, we will also make a scatterplot, whose x-axis is neighbors and y-axis is mean to visualize the accuracy of K. Next, we want to use this K to find the accuracy of this classification model by testing the testing data. Finally, we can predict the quality of the new apple with the workflow function.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15920cad-7071-4467-8b49-025dcd98a5d3",
+   "metadata": {},
+   "source": [
+    "# Expected Outcomes and Significance\n",
+    "## Hypothesized Outcome\n",
+    "\n",
+    "Based on our preliminary general knowledge that we have on the market and properties of apples, we expect that acidity levels have crucial influence on the perceived quality of an apple. We expect that apples with relatively higher acidity levels will likely end up being classified as bad qualities compared to apples with lower acidity levels. Moreover, we believe that apples with higher ripeness values would most likely end up being classified as good quality since ripeness varies per apple and most fruits are sold at a certain ripeness level before they eventually become overripe and become rotten.\n",
+    "\n",
+    "## Why is studying apples so important?\n",
+    "\n",
+    "We believe that knowing how properties like acidity levels affect perceived quality levels of fruits like apples, can paint a clearer picture on not only how quality is determined but could also be the foundation for future research on how to either lower or higher acidity levels to ensure more “good” quality apples are produced. In addition, this experiment can help us determine what is the \"ideal\" ripeness and acidity level for which an apple is most likely going to be considered as \"good\" quality while possibly being able to determine the thresholds where \"bad\" quality apples become more frequent.\n",
+    "\n",
+    "Furthermore, this experiment could serve as future grounds for research that could dive deeper into the health impacts of such properties when the apples are consumed or the production process of apples.\n"
    ]
   },
   {
@@ -2409,31 +2430,6 @@
     "apples_comparison_plot \n",
     "# The relationship between Ripeness and Acidity cannot be inferred with a scatterplot because all data is standardized."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bffc5070-c461-4a87-a3c7-2dd9fa05a5c0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cc0447b9-27c9-4835-beb3-60d21c033fc6",
-   "metadata": {},
-   "source": [
-    "# Expected outcomes and significance\n",
-    "We expect to find that apples with relatively higher acidity levels will likely end up as bad quality compared to apples with lower acidity levels. By knowing how acidity levels affect quality, it could be easier to predict and or identify if an apple will be bad quality. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "174a103c-92bc-445a-879a-4a8e6e98aace",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
