added teh link to the doc

--- a/Final Report.ipynb
+++ b/Final Report.ipynb
@@ -1,9 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28c6011f-1520-45a8-acae-531de8f1cfb3",
+   "cell_type": "markdown",
+   "id": "f05dd80b-e12b-4159-9cbd-268c5935d427",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -11,6 +10,15 @@
     },
     "tags": []
    },
+   "source": [
+    "https://docs.google.com/document/d/1_a2WZi0Lgph7vbjDxdM328l8vzhxK2Xg1pJxLwoewng/edit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ca3866e-fd20-4da8-8c9c-c8cea98806b6",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
