--- a/Final Report Data.ipynb
+++ b/Final Report Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "51a2d1ec-59a9-42c1-8715-056190b2614c",
    "metadata": {
     "editable": true,
@@ -11,25 +11,215 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Attaching package: ‘janitor’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:stats’:\n",
+      "\n",
+      "    chisq.test, fisher.test\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(repr)\n",
     "library(tidymodels)\n",
+    "library(janitor)\n",
     "options(repr.matrix.max.rows = 6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e3fa57d2-820f-4b4b-91df-9c633154139a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1mRows: \u001b[22m\u001b[34m4001\u001b[39m \u001b[1mColumns: \u001b[22m\u001b[34m9\u001b[39m\n",
+      "\u001b[36m──\u001b[39m \u001b[1mColumn specification\u001b[22m \u001b[36m────────────────────────────────────────────────────────\u001b[39m\n",
+      "\u001b[1mDelimiter:\u001b[22m \",\"\n",
+      "\u001b[31mchr\u001b[39m (2): Acidity, Quality\n",
+      "\u001b[32mdbl\u001b[39m (7): A_id, Size, Weight, Sweetness, Crunchiness, Juiciness, Ripeness\n",
+      "\n",
+      "\u001b[36mℹ\u001b[39m Use `spec()` to retrieve the full column specification for this data.\n",
+      "\u001b[36mℹ\u001b[39m Specify the column types or set `show_col_types = FALSE` to quiet this message.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 4000 × 9</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>A_id</th><th scope=col>Size</th><th scope=col>Weight</th><th scope=col>Sweetness</th><th scope=col>Crunchiness</th><th scope=col>Juiciness</th><th scope=col>Ripeness</th><th scope=col>Acidity</th><th scope=col>Quality</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>0</td><td>-3.9700485</td><td>-2.512336</td><td> 5.346330</td><td>-1.0120087</td><td>1.8449004</td><td> 0.32983980</td><td>-0.491590483</td><td>good</td></tr>\n",
+       "\t<tr><td>1</td><td>-1.1952172</td><td>-2.839257</td><td> 3.664059</td><td> 1.5882323</td><td>0.8532858</td><td> 0.86753008</td><td>-0.722809367</td><td>good</td></tr>\n",
+       "\t<tr><td>2</td><td>-0.2920239</td><td>-1.351282</td><td>-1.738429</td><td>-0.3426159</td><td>2.8386355</td><td>-0.03803333</td><td>2.621636473 </td><td>bad </td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>3997</td><td>-2.6345153</td><td>-2.138247</td><td>-2.4404613</td><td> 0.6572229</td><td>2.199709</td><td> 4.7638592</td><td>-1.334611391</td><td>bad </td></tr>\n",
+       "\t<tr><td>3998</td><td>-4.0080037</td><td>-1.779337</td><td> 2.3663970</td><td>-0.2003294</td><td>2.161435</td><td> 0.2144884</td><td>-2.229719806</td><td>good</td></tr>\n",
+       "\t<tr><td>3999</td><td> 0.2785397</td><td>-1.715505</td><td> 0.1212173</td><td>-1.1540748</td><td>1.266677</td><td>-0.7765715</td><td>1.599796456 </td><td>good</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 4000 × 9\n",
+       "\\begin{tabular}{lllllllll}\n",
+       " A\\_id & Size & Weight & Sweetness & Crunchiness & Juiciness & Ripeness & Acidity & Quality\\\\\n",
+       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <chr> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t 0 & -3.9700485 & -2.512336 &  5.346330 & -1.0120087 & 1.8449004 &  0.32983980 & -0.491590483 & good\\\\\n",
+       "\t 1 & -1.1952172 & -2.839257 &  3.664059 &  1.5882323 & 0.8532858 &  0.86753008 & -0.722809367 & good\\\\\n",
+       "\t 2 & -0.2920239 & -1.351282 & -1.738429 & -0.3426159 & 2.8386355 & -0.03803333 & 2.621636473  & bad \\\\\n",
+       "\t ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮\\\\\n",
+       "\t 3997 & -2.6345153 & -2.138247 & -2.4404613 &  0.6572229 & 2.199709 &  4.7638592 & -1.334611391 & bad \\\\\n",
+       "\t 3998 & -4.0080037 & -1.779337 &  2.3663970 & -0.2003294 & 2.161435 &  0.2144884 & -2.229719806 & good\\\\\n",
+       "\t 3999 &  0.2785397 & -1.715505 &  0.1212173 & -1.1540748 & 1.266677 & -0.7765715 & 1.599796456  & good\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 4000 × 9\n",
+       "\n",
+       "| A_id &lt;dbl&gt; | Size &lt;dbl&gt; | Weight &lt;dbl&gt; | Sweetness &lt;dbl&gt; | Crunchiness &lt;dbl&gt; | Juiciness &lt;dbl&gt; | Ripeness &lt;dbl&gt; | Acidity &lt;chr&gt; | Quality &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|\n",
+       "| 0 | -3.9700485 | -2.512336 |  5.346330 | -1.0120087 | 1.8449004 |  0.32983980 | -0.491590483 | good |\n",
+       "| 1 | -1.1952172 | -2.839257 |  3.664059 |  1.5882323 | 0.8532858 |  0.86753008 | -0.722809367 | good |\n",
+       "| 2 | -0.2920239 | -1.351282 | -1.738429 | -0.3426159 | 2.8386355 | -0.03803333 | 2.621636473  | bad  |\n",
+       "| ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ |\n",
+       "| 3997 | -2.6345153 | -2.138247 | -2.4404613 |  0.6572229 | 2.199709 |  4.7638592 | -1.334611391 | bad  |\n",
+       "| 3998 | -4.0080037 | -1.779337 |  2.3663970 | -0.2003294 | 2.161435 |  0.2144884 | -2.229719806 | good |\n",
+       "| 3999 |  0.2785397 | -1.715505 |  0.1212173 | -1.1540748 | 1.266677 | -0.7765715 | 1.599796456  | good |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     A_id Size       Weight    Sweetness  Crunchiness Juiciness Ripeness   \n",
+       "1    0    -3.9700485 -2.512336  5.346330  -1.0120087  1.8449004  0.32983980\n",
+       "2    1    -1.1952172 -2.839257  3.664059   1.5882323  0.8532858  0.86753008\n",
+       "3    2    -0.2920239 -1.351282 -1.738429  -0.3426159  2.8386355 -0.03803333\n",
+       "⋮    ⋮    ⋮          ⋮         ⋮          ⋮           ⋮         ⋮          \n",
+       "3998 3997 -2.6345153 -2.138247 -2.4404613  0.6572229  2.199709   4.7638592 \n",
+       "3999 3998 -4.0080037 -1.779337  2.3663970 -0.2003294  2.161435   0.2144884 \n",
+       "4000 3999  0.2785397 -1.715505  0.1212173 -1.1540748  1.266677  -0.7765715 \n",
+       "     Acidity      Quality\n",
+       "1    -0.491590483 good   \n",
+       "2    -0.722809367 good   \n",
+       "3    2.621636473  bad    \n",
+       "⋮    ⋮            ⋮      \n",
+       "3998 -1.334611391 bad    \n",
+       "3999 -2.229719806 good   \n",
+       "4000 1.599796456  good   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#Because this dataframe involves comma separated values, we used the appropriate read function.\n",
     "apple <- read_csv(\"data/apple_quality.csv\") |>\n",
     "    head(-1) #This function removes the last row of the dataframe which included NA values and text crediting the author.\n",
     "apple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0416c240-f9e0-4a59-8100-2bbcf4f40736",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 4000 × 9</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>a_id</th><th scope=col>size</th><th scope=col>weight</th><th scope=col>sweetness</th><th scope=col>crunchiness</th><th scope=col>juiciness</th><th scope=col>ripeness</th><th scope=col>acidity</th><th scope=col>quality</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>0</td><td>-3.9700485</td><td>-2.512336</td><td> 5.346330</td><td>-1.0120087</td><td>1.8449004</td><td> 0.32983980</td><td>-0.4915905</td><td>good</td></tr>\n",
+       "\t<tr><td>1</td><td>-1.1952172</td><td>-2.839257</td><td> 3.664059</td><td> 1.5882323</td><td>0.8532858</td><td> 0.86753008</td><td>-0.7228094</td><td>good</td></tr>\n",
+       "\t<tr><td>2</td><td>-0.2920239</td><td>-1.351282</td><td>-1.738429</td><td>-0.3426159</td><td>2.8386355</td><td>-0.03803333</td><td> 2.6216365</td><td>bad </td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>3997</td><td>-2.6345153</td><td>-2.138247</td><td>-2.4404613</td><td> 0.6572229</td><td>2.199709</td><td> 4.7638592</td><td>-1.334611</td><td>bad </td></tr>\n",
+       "\t<tr><td>3998</td><td>-4.0080037</td><td>-1.779337</td><td> 2.3663970</td><td>-0.2003294</td><td>2.161435</td><td> 0.2144884</td><td>-2.229720</td><td>good</td></tr>\n",
+       "\t<tr><td>3999</td><td> 0.2785397</td><td>-1.715505</td><td> 0.1212173</td><td>-1.1540748</td><td>1.266677</td><td>-0.7765715</td><td> 1.599796</td><td>good</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 4000 × 9\n",
+       "\\begin{tabular}{lllllllll}\n",
+       " a\\_id & size & weight & sweetness & crunchiness & juiciness & ripeness & acidity & quality\\\\\n",
+       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t 0 & -3.9700485 & -2.512336 &  5.346330 & -1.0120087 & 1.8449004 &  0.32983980 & -0.4915905 & good\\\\\n",
+       "\t 1 & -1.1952172 & -2.839257 &  3.664059 &  1.5882323 & 0.8532858 &  0.86753008 & -0.7228094 & good\\\\\n",
+       "\t 2 & -0.2920239 & -1.351282 & -1.738429 & -0.3426159 & 2.8386355 & -0.03803333 &  2.6216365 & bad \\\\\n",
+       "\t ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮\\\\\n",
+       "\t 3997 & -2.6345153 & -2.138247 & -2.4404613 &  0.6572229 & 2.199709 &  4.7638592 & -1.334611 & bad \\\\\n",
+       "\t 3998 & -4.0080037 & -1.779337 &  2.3663970 & -0.2003294 & 2.161435 &  0.2144884 & -2.229720 & good\\\\\n",
+       "\t 3999 &  0.2785397 & -1.715505 &  0.1212173 & -1.1540748 & 1.266677 & -0.7765715 &  1.599796 & good\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 4000 × 9\n",
+       "\n",
+       "| a_id &lt;dbl&gt; | size &lt;dbl&gt; | weight &lt;dbl&gt; | sweetness &lt;dbl&gt; | crunchiness &lt;dbl&gt; | juiciness &lt;dbl&gt; | ripeness &lt;dbl&gt; | acidity &lt;dbl&gt; | quality &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|\n",
+       "| 0 | -3.9700485 | -2.512336 |  5.346330 | -1.0120087 | 1.8449004 |  0.32983980 | -0.4915905 | good |\n",
+       "| 1 | -1.1952172 | -2.839257 |  3.664059 |  1.5882323 | 0.8532858 |  0.86753008 | -0.7228094 | good |\n",
+       "| 2 | -0.2920239 | -1.351282 | -1.738429 | -0.3426159 | 2.8386355 | -0.03803333 |  2.6216365 | bad  |\n",
+       "| ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ |\n",
+       "| 3997 | -2.6345153 | -2.138247 | -2.4404613 |  0.6572229 | 2.199709 |  4.7638592 | -1.334611 | bad  |\n",
+       "| 3998 | -4.0080037 | -1.779337 |  2.3663970 | -0.2003294 | 2.161435 |  0.2144884 | -2.229720 | good |\n",
+       "| 3999 |  0.2785397 | -1.715505 |  0.1212173 | -1.1540748 | 1.266677 | -0.7765715 |  1.599796 | good |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     a_id size       weight    sweetness  crunchiness juiciness ripeness   \n",
+       "1    0    -3.9700485 -2.512336  5.346330  -1.0120087  1.8449004  0.32983980\n",
+       "2    1    -1.1952172 -2.839257  3.664059   1.5882323  0.8532858  0.86753008\n",
+       "3    2    -0.2920239 -1.351282 -1.738429  -0.3426159  2.8386355 -0.03803333\n",
+       "⋮    ⋮    ⋮          ⋮         ⋮          ⋮           ⋮         ⋮          \n",
+       "3998 3997 -2.6345153 -2.138247 -2.4404613  0.6572229  2.199709   4.7638592 \n",
+       "3999 3998 -4.0080037 -1.779337  2.3663970 -0.2003294  2.161435   0.2144884 \n",
+       "4000 3999  0.2785397 -1.715505  0.1212173 -1.1540748  1.266677  -0.7765715 \n",
+       "     acidity    quality\n",
+       "1    -0.4915905 good   \n",
+       "2    -0.7228094 good   \n",
+       "3     2.6216365 bad    \n",
+       "⋮    ⋮          ⋮      \n",
+       "3998 -1.334611  bad    \n",
+       "3999 -2.229720  good   \n",
+       "4000  1.599796  good   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "apple_manipulated <- apple |>\n",
+    "    clean_names() |>\n",
+    "    mutate(acidity = as.numeric(acidity))\n",
+    "apple_manipulated"
    ]
   },
   {
@@ -42,53 +232,24 @@
     "set.seed(4321)\n",
     "#We selected the values we would use for our data analysis, which only included Ripeness, Acidity, and Quality.\n",
     "#A random sample of 100 was taken because the data set was so large.\n",
-    "apple_select <- apple |>\n",
+    "apple_selected <- apple |>\n",
     "    select(Ripeness, Acidity, Quality) |>\n",
-    "    # sample_n(100) \n",
     "apple_select"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9228508a-9a68-4257-976c-18be4e10023d",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "af2bbf3c-736e-43b6-a44a-754b33ff0977",
+   "metadata": {},
    "outputs": [],
    "source": [
+    "apple_split <- initial_split(apple_select, prop = 0.75, strata = Quality)\n",
+    "apple_train <- training(apple_split)\n",
+    "apple_test <- testing(apple_split)\n",
     "\n",
-    "#In the following code, a K-nn classifier is created using the training data and cross validation with 10 folds is completed to select an optimal K value.\n",
-    "\n",
-    "#quality_good_data <- data |>\n",
-    "#    select(Ripeness, Acidity, Quality) |>\n",
-    "#    filter(Quality == \"good\", na.rm = TRUE)\n",
-    "\n",
-    "#quality_good_data\n",
-    "\n",
-    "#options(repr.plot.width = 5, repr.plot.height = 5)\n",
-    "#plot_filtered_good_data <- quality_good_data  |>\n",
-    "#    ggplot(aes(x= Ripeness, y = Acidity, color = Quality)) +\n",
-    "#    geom_point(alpha =0.4) +\n",
-    "#    labs(x = \"Ripeness\",\n",
-    "#         y = \"Acidity\",\n",
-    "#         color = \"Quality\")\n",
-    "#plot_filtered_good_data\n",
-    "\n",
-    "# options(repr.plot.width = 5, repr.plot.height = 5)\n",
-    "\n",
-    "# quality_bad_data <- data |>\n",
-    "#     select(Ripeness, Acidity, Quality) |>\n",
-    "#     filter(Quality == \"bad\", na.rm = TRUE)\n",
-    "\n",
-    "# quality_bad_data\n",
-    "# plot_filtered_bad_data <- quality_bad_data  |>\n",
-    "#     ggplot(aes(x= Ripeness, y = Acidity, color = Quality)) +\n",
-    "#     geom_point(alpha =0.4) +\n",
-    "#     labs(x = \"Ripeness\",\n",
-    "#          y = \"Acidity\",\n",
-    "#          color = \"Quality\")\n",
-    "# plot_filtered_bad_data"
+    "apple_spec <- nearest_neighbor(weight_\n",
+    "\n"
    ]
   },
   {
@@ -98,7 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # # Commented out (for now) since we switch to linear regression\n",
+    "\n",
     "\n",
     "# # apple_split <- initial_split(apple_select, prop = 0.75, strata = Quality)\n",
     "# # apple_train <- training(apple_split)\n",
@@ -144,6 +305,49 @@
     "# apple_test<-testing(apple_split)\n",
     "# glimpse(apple_train)\n",
     "# #create the split\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9228508a-9a68-4257-976c-18be4e10023d",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "#In the following code, a K-nn classifier is created using the training data and cross validation with 10 folds is completed to select an optimal K value.\n",
+    "\n",
+    "#quality_good_data <- data |>\n",
+    "#    select(Ripeness, Acidity, Quality) |>\n",
+    "#    filter(Quality == \"good\", na.rm = TRUE)\n",
+    "\n",
+    "#quality_good_data\n",
+    "\n",
+    "#options(repr.plot.width = 5, repr.plot.height = 5)\n",
+    "#plot_filtered_good_data <- quality_good_data  |>\n",
+    "#    ggplot(aes(x= Ripeness, y = Acidity, color = Quality)) +\n",
+    "#    geom_point(alpha =0.4) +\n",
+    "#    labs(x = \"Ripeness\",\n",
+    "#         y = \"Acidity\",\n",
+    "#         color = \"Quality\")\n",
+    "#plot_filtered_good_data\n",
+    "\n",
+    "# options(repr.plot.width = 5, repr.plot.height = 5)\n",
+    "\n",
+    "# quality_bad_data <- data |>\n",
+    "#     select(Ripeness, Acidity, Quality) |>\n",
+    "#     filter(Quality == \"bad\", na.rm = TRUE)\n",
+    "\n",
+    "# quality_bad_data\n",
+    "# plot_filtered_bad_data <- quality_bad_data  |>\n",
+    "#     ggplot(aes(x= Ripeness, y = Acidity, color = Quality)) +\n",
+    "#     geom_point(alpha =0.4) +\n",
+    "#     labs(x = \"Ripeness\",\n",
+    "#          y = \"Acidity\",\n",
+    "#          color = \"Quality\")\n",
+    "# plot_filtered_bad_data"
    ]
   },
   {
